#0000: fixing smoke <Luka>